--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      - POSTGRES_PASSWORD="${DB_PASSWORD}"
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
